Fixed images being too large

--- a/src/templates/blog.scss
+++ b/src/templates/blog.scss
@@ -9,7 +9,7 @@
 }
 
 .blog-post-content img {
-    width: 100%;
+    max-width: 100%;
 }
 
 .blog-post-container {
